--- a/notebook/Chapter_2_Statistical_Learning.ipynb
+++ b/notebook/Chapter_2_Statistical_Learning.ipynb
@@ -78,7 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import needed packages\n",
+    "import numpy as np\n",
+    "import gc\n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -91,12 +104,6 @@
     }
    ],
    "source": [
-    "#Import needed packages\n",
-    "import numpy as np\n",
-    "import gc\n",
-    "import pandas as pd \n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "#create a simple array using the imported package \n",
     "x = np.array([1,6,2])\n",
     "print(x)\n",
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +302,7 @@
    ],
    "source": [
     "# Load Data from your computer\n",
-    "auto = pd.read_csv('/Users/shilpa/Documents/blog/Sharing_ISL_python/data/Auto.csv', header=0, na_values='?')\n",
+    "auto = pd.read_csv('../data/Auto.csv', header=0, na_values='?')\n",
     "print(auto.head(5)) ##View top 5 rows of the data"
    ]
   },
