--- a/notebook/Chapter_3_Linear_Regression.ipynb
+++ b/notebook/Chapter_3_Linear_Regression.ipynb
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "### Multiple regression with 2 predicators- understand quality of model & solution using model statistics like p-value, R-sq etc.\n",
-    "boston = pd.read_csv('/Users/shilpa/Documents/blog/Sharing_ISL_python/data/Boston.csv', header=0)\n",
+    "boston = pd.read_csv('../data/Boston.csv', header=0)\n",
     "boston.shape\n",
     "lm = smf.ols('medv~lstat+age', data=boston).fit()\n",
     "print(lm.summary())"
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "#Experiment with Qualitative Predictors in following data \n",
-    "carseats = pd.read_csv('/Users/shilpa/Documents/blog/Sharing_ISL_python/data/Carseats.csv', header=0)\n",
+    "carseats = pd.read_csv('../data/Carseats.csv', header=0)\n",
     "carseats.head()"
    ]
   },
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "lm_carseats_dummy = smf.ols('Sales ~ Income + Advertising + Price + Age + C(ShelveLoc)', \n",
-    "                            data = Carseats).fit()\n",
+    "                            data = carseats).fit()\n",
     "lm_carseats_dummy.summary()\n",
     "# see you will get 2 coefficients for ShelveLoc variables as it has 3 values and we are considering them categorical"
    ]
