--- a/notebook/Chapter_2_Statistical_Learning.ipynb
+++ b/notebook/Chapter_2_Statistical_Learning.ipynb
@@ -6,27 +6,21 @@
    "source": [
     "# Chapter 2: Statistical Learning\n",
     "\n",
-    "Topics covered in this chapter of the book- \n",
+    "Topics covered- \n",
     "\n",
-    "* 2.1 What Is Statistical Learning?................. 15\n",
-    "  * 2.1.1 Why Estimate f?.................... 17\n",
-    "  * 2.1.2 How Do We Estimate f? ............... 21\n",
-    "  * 2.1.3 The Trade-Off Between Prediction Accuracy and Model Interpretability .............. 24\n",
-    "  * 2.1.4 Supervised Versus Unsupervised Learning . . . . . . 26\n",
-    "  * 2.1.5 Regression Versus Classification Problems . . . . . . 28\n",
-    "* 2.2 Assessing Model Accuracy................... 29 \n",
-    "  * 2.2.1 Measuring the Quality of Fit ............. 29 \n",
-    "  * 2.2.2 The Bias-Variance Trade-Off ............. 33\n",
-    "  * 2.2.3 The Classification Setting ............... 37\n",
-    "  \n",
-    "**Following is a quick summary.**  "
+    "- What Is Statistical Learning?\n",
+    "- Assessing Model Accuracy\n",
+    "- Introduction to Programming language \n",
+    "\n",
+    "**Following is a quick summary of these topics.**  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Statistical learning** refers to a vast set of tools or mathematical functions for understanding the patterns in  the data. When these functions are learned by a computer then, Statistical Learning becomes Machine Learning.\n",
+    "### What Is Statistical Learning? \n",
+    "Statistical learning refers to a vast set of tools or mathematical functions for understanding the patterns in  the data. When these functions are learned by a computer then, Statistical Learning becomes Machine Learning.\n",
     "\n",
     "There are two main reasons that we may wish to estimate the functions: prediction and inference.\n",
     "\n",
@@ -46,7 +40,7 @@
     "- Which media generate the biggest boost in sales? or\n",
     "- How much increase in sales is associated with a given increase in TV advertising?\n",
     "\n",
-    "### Assessing Model Accuracy-\n",
+    "### Assessing Model Accuracy\n",
     "To assess the right statistical learning model or function for your prediction, we need to understand following concepts- \n",
     "\n",
     "#### Measuring the Quality of Fit\n",
@@ -63,16 +57,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lab: Introduction to Programming language \n",
+    "### Lab: Introduction to Programming language \n",
     "\n",
-    "The book covers following topics in R- \n",
-    "* BasicCommands.................... 42\n",
-    "* Graphics ........................ 45\n",
-    "* IndexingData ..................... 47\n",
-    "* LoadingData...................... 48\n",
-    "* Additional Graphical and Numerical Summaries . . 49\n",
-    "\n",
-    "Below is a similar quick intro to Python.\n",
+    "The book introduces to R. This is a similar quick intro to Python.\n",
     "(You can do a detailed python learning course at kaggle, coursera or any similar platform. One basic one- https://www.kaggle.com/learn/python)"
    ]
   },
