--- a/notebook/Chapter_3_Linear_Regression.ipynb
+++ b/notebook/Chapter_3_Linear_Regression.ipynb
@@ -5,23 +5,15 @@
    "metadata": {},
    "source": [
     "# Linear Regression\n",
-    "Topics covered in this chapter of the book-\n",
     "\n",
-    "* 3.1 Simple Linear Regression ................... 61\n",
-    "  * 3.1.1 Estimating the Coefficients .............. 61\n",
-    "  * 3.1.2 Assessing the Accuracy of the Coefficient Estimates........................ 63\n",
-    "  * 3.1.3 Assessing the AccuracyoftheModel . . . . . . . . . 68\n",
-    "* 3.2 Multiple Linear Regression .................. 71\n",
-    "  * 3.2.1 Estimating the Regression Coefficients . . . . . . . . 72 \n",
-    "  * 3.2.2 SomeImportantQuestions .............. 75\n",
-    "* 3.3 Other Considerations in the Regression Model . . . . . . . . 82\n",
-    "  * 3.3.1 Qualitative Predictors ................. 82\n",
-    "  * 3.3.2 Extensions of the Linear Model . . . . . . . . . . . . 86\n",
-    "  * 3.3.3 Potential Problems................... 92\n",
-    "* 3.4 The Marketing Plan ...................... 102\n",
-    "* 3.5 Comparison of Linear Regression with K -Nearest Neighbors............................ 104\n",
+    "Topics covered-\n",
     "\n",
-    "**Following is the summary of concepts along with data and python code-**\n"
+    "- Linear Regression\n",
+    "- Qualitative Predictors\n",
+    "- Non-linear Transformations of the Predictors \n",
+    "- Potential Problems\n",
+    "\n",
+    "**Following is the summary of concepts along with data and python code**\n"
    ]
   },
   {
@@ -45,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Understand Linear Regression\n",
+    "### Linear Regression\n",
     "**Linear regression (LR)** is a approach for predicting a quantitative response Y on the basis of some predictor variables, Xs, assumig a linear relationship between Xs and Y. Mathematically, we can write this linear relationship as\n",
     "\n",
     "Y ≈ β0 + β1X1 + β2X2 ... βnxn \n",
@@ -252,6 +244,13 @@
     "The first is to drop one of the problematic variables from the regression. \n",
     "The second solution is to combine the collinear variables together into a single predictor by either taking average of their standardized versions or using dimension reduction methods like PCA."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
