--- a/notebook/Chapter_5_Resampling_Methods.ipynb
+++ b/notebook/Chapter_5_Resampling_Methods.ipynb
@@ -5,27 +5,16 @@
    "metadata": {},
    "source": [
     "# Resampling Methods\n",
-    "Topics covered in this chapter of the book-\n",
     "\n",
-    "* 5.1 Cross-Validation ........................ 176\n",
-    "  * 5.1.1 TheValidationSetApproach ............. 176\n",
-    "  * 5.1.2 Leave-One-Out Cross-Validation . . . . . . . . . . . 178\n",
-    "  * 5.1.3 k-FoldCross-Validation ................ 181\n",
-    "  * 5.1.4 Bias-Variance Trade-Off for k-Fold Cross-Validation .................... 183\n",
-    "  * 5.1.5 Cross-Validation on Classification Problems . . . . . 184\n",
-    "* 5.2 TheBootstrap ......................... 187\n",
+    "Topics covered-\n",
+    "\n",
+    "* Cross-Validation\n",
+    "  * The Validation Set Approach\n",
+    "  * Leave-One-Out Cross-Validation \n",
+    "  * k-FoldCross-Validation\n",
+    "* TheBootstrap\n",
     "\n",
     "**Following is the summary of concepts along with data and python code-**\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "_______\n",
-    "\n",
-    "**Resampling methods** involve repeatedly drawing samples from a training set and refitting a model of interest on each sample in order to obtain additional information about the fitted model.\n",
-    "Two of the most commonly used resampling methods, *cross-validation* and the *bootstrap*."
    ]
   },
   {
@@ -55,6 +44,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "_______\n",
+    "\n",
+    "**Resampling methods** involve repeatedly drawing samples from a training set and refitting a model of interest on each sample in order to obtain additional information about the fitted model.\n",
+    "\n",
+    "Two of the most commonly used resampling methods, *cross-validation* and the *bootstrap*.\n",
+    "\n",
     "### Cross-Validation (CV)\n",
     "\n",
     "CV is used to estimate the error rate with a given model on test data, in order to evaluate its performance (model assessment), or to select the appropriate level of flexibility (model selection). \n",
