--- a/notebook/Chapter_6_Linear_Model_Selection_and_Regularization.ipynb
+++ b/notebook/Chapter_6_Linear_Model_Selection_and_Regularization.ipynb
@@ -8,32 +8,16 @@
     "\n",
     "Topics covered in this chapter of the book-\n",
     "\n",
-    "* 6.1 SubsetSelection ........................ 205 \n",
-    "  * 6.1.1 BestSubsetSelection ................. 205 \n",
-    "  * 6.1.2 StepwiseSelection ................... 207 \n",
-    "  * 6.1.3 ChoosingtheOptimalModel ............. 210\n",
-    "* 6.2 ShrinkageMethods....................... 214 \n",
-    "  * 6.2.1 RidgeRegression.................... 215 \n",
-    "  * 6.2.2 TheLasso........................ 219 \n",
-    "  * 6.2.3 SelectingtheTuningParameter. . . . . . . . . . . . 227\n",
-    "* 6.3 DimensionReductionMethods ................ 228 \n",
-    "  * 6.3.1 Principal Components Regression . . . . . . . . . . . 230 \n",
-    "  * 6.3.2 PartialLeastSquares ................. 237\n",
-    "* 6.4 ConsiderationsinHighDimensions . . . . . . . . . . . . . . 238 \n",
-    "  * 6.4.1 High-DimensionalData ................ 238 \n",
-    "  * 6.4.2 What Goes Wrong in High Dimensions? . . . . . . . 239 \n",
-    "  * 6.4.3 RegressioninHighDimensions . . . . . . . . . . . . 241 \n",
-    "  * 6.4.4 Interpreting Results in High Dimensions . . . . . . . 243\n",
-    "* 6.5 Lab1:SubsetSelectionMethods ............... 244\n",
-    "  * 6.5.1 BestSubsetSelection ................. 244\n",
-    "  * 6.5.2 Forward and Backward Stepwise Selection . . . . . . 247\n",
-    "  * 6.5.3 Choosing Among Models Using the Validation Set Approach and Cross-Validation . . . . . . . . . . 248\n",
-    "* 6.6 Lab2:RidgeRegressionandtheLasso. . . . . . . . . . . . 251 \n",
-    "  * 6.6.1 RidgeRegression.................... 251 \n",
-    "  * 6.6.2 TheLasso........................ 255\n",
-    "* 6.7 Lab3:PCRandPLSRegression ............... 256 \n",
-    "  * 6.7.1 Principal Components Regression . . . . . . . . . . . 256 \n",
-    "  * 6.7.2 PartialLeastSquares ................. 258\n",
+    "* Subset Selection Models\n",
+    "  * Best Subset Selection\n",
+    "  * Forward Stepwise Selection \n",
+    "  * Backward Stepwise Selection \n",
+    "* Shrinkage Methods\n",
+    "  * Ridge Regression\n",
+    "  * The Lasso \n",
+    "* Dimension Reduction Methods- PCR and PLS Regression \n",
+    "  * Principal Components Regression\n",
+    "  * Partial Least Squares\n",
     "\n",
     "**Following is the summary of concepts along with data and python code-**"
    ]
