--- a/notebook/Chapter_4_Classification.ipynb
+++ b/notebook/Chapter_4_Classification.ipynb
@@ -18,25 +18,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "_____________\n",
-    "\n",
-    "### Classification Overview \n",
-    "\n",
-    "All the ways of categorising observations into some defined groups come under classification. So in case of qualitative or categorical response variable Y, the prediction model is also classification model.\n",
-    "Three of the most widely-used classifiers, discussed in this chapter: \n",
-    "* logistic regression \n",
-    "* linear discriminant analysis\n",
-    "* K-nearest neighbors\n",
-    "\n",
-    "We discuss more computer-intensive methods in later chapters, such as generalized additive models (Chapter 7), trees, random forests, and boosting (Chapter 8), and support vector machines (Chapter 9)."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +36,23 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis as QDA\n",
     "from sklearn.neighbors import KNeighborsClassifier as KNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_____________\n",
+    "\n",
+    "### Classification Overview \n",
+    "\n",
+    "All the ways of categorising observations into some defined groups come under classification. So in case of qualitative or categorical response variable Y, the prediction model is also classification model.\n",
+    "Three of the most widely-used classifiers, discussed in this chapter: \n",
+    "* logistic regression \n",
+    "* linear discriminant analysis\n",
+    "* K-nearest neighbors\n",
+    "\n",
+    "We discuss more computer-intensive methods in later chapters, such as generalized additive models (Chapter 7), trees, random forests, and boosting (Chapter 8), and support vector machines (Chapter 9)."
    ]
   },
   {
@@ -75,6 +75,13 @@
     "Transforming & extending it multiple logistic regression-\n",
     "![image-2.png](attachment:image-2.png)\n",
     "The left-hand side is called the log-odds or logit. We use the maximum likelihood method to estimate β0,β1,...,βp."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Lets using logistic regression to predict percentage returns on the stocks. This data consists of percentage returns for the S&P 500 stock index over 1,250 days, from year 2001 to 2005. For each date, we have recorded the percentage returns for each of the five previous trading days, Lag1 through Lag5.**"
    ]
   },
   {
@@ -107,8 +114,6 @@
     }
    ],
    "source": [
-    "# Lets using logistic regression to predict percentage returns on the stocks. This data consists of percentage returns for the S&P 500 stock index over 1,250 days, from year 2001 to 2005. \n",
-    "# For each date, we have recorded the percentage returns for each of the five previous trading days, Lag1 through Lag5. \n",
     "Smarket = pd.read_csv('../data/Smarket.csv', header=0)\n",
     "Smarket.head"
    ]
@@ -333,7 +338,7 @@
    "source": [
     "However, this result is misleading because we trained and tested the model on the same set of 1, 250 observations. In order to better assess the accuracy of the logistic regression model in this setting, we can fit the model using part of the data, and then examine how well it predicts the held out data.\n",
     "\n",
-    "*To implement this strategy, why don't you take up this next challenge?*\n",
+    "***To implement this strategy, why don't you take up this next challenge?***\n",
     "\n",
     "Try to first create a vector corresponding to the observations from 2001 through 2004. Then use this vector to create a held out data set of observations from 2005. \n",
     "Do try this challenge and compare on results to the book, page 159-160."
