--- a/notebook/Chapter_6_Linear_Model_Selection_and_Regularization.ipynb
+++ b/notebook/Chapter_6_Linear_Model_Selection_and_Regularization.ipynb
@@ -1070,7 +1070,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1084,7 +1084,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
