--- a/notebook/chapter_7_Moving_Beyond_Linearity.ipynb
+++ b/notebook/chapter_7_Moving_Beyond_Linearity.ipynb
@@ -432,7 +432,7 @@
     "\n",
     "In regression splines, we fit a piecewise degree-d polynomial under the constraint that it (and possibly its first d − 1 derivatives) be continuous. \n",
     "\n",
-    "In order to fit regression splines in python, we use the spatsy library. The regression splines can be fit by constructing an appropriate matrix of basis functions. The bs() function generates the entire matrix of bs() basis functions for splines with the specified set of knots."
+    "In order to fit regression splines in python, we use the spatsy library. The regression splines can be fit by constructing an appropriate matrix of basis functions. The bs() function generates the entire matrix of basis functions for splines with the specified set of knots."
    ]
   },
   {
